--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 {
   "Visibility": "VISIBLE",
-  "Title": "Test",
-  "Description": "Test Message",
-  "MainTextButton": "Update",
+  "Title": "Instagram",
+  "Description": "Error Fixed",
+  "MainTextButton": "now Update",
   "Cancelable": "true",
   "CancelButtonText": "Cancel",
   "DownloadLink": "https://google.com",
